--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,11 +44,13 @@
         --color-status-success: 22, 163, 74; /* text-green-600 */
         --color-status-warning: 234, 88, 12; /* text-orange-600 */
         --color-status-danger: 220, 38, 38; /* text-red-600 */
+
+        --color-fuck:255,0,0;
     }
 
     [data-theme="dim"] {
         /* Brand */
-        --color-primary: 169, 74, 255;
+        --color-primary: 45, 101, 153;
         --color-primary-light: 191, 119, 255;
         --color-primary-dark: 151, 33, 255;
 
@@ -130,6 +132,52 @@
         --color-status-success: 74, 222, 128; /* text-green-400 */
         --color-status-warning: 251, 146, 60; /* text-orange-400 */
         --color-status-danger: 239, 68, 68; /* text-red-500 */
+    }
+    [data-theme="test"] {
+        /* Brand */
+        --color-primary: 17, 86, 136;
+        --color-primary-light: 81, 127, 164;
+        --color-primary-dark: 48, 96, 136;
+
+        /* Background */
+        --color-background-base: 227, 232, 236; /* bg-white */
+        --color-background-secondary: 250, 250, 250; /* bg-neutral-50 */
+        --color-background-tertiary: 245, 245, 245; /* bg-neutral-100 */
+        --color-background-muted: 255, 255, 255; /* bg-neutral-200 */
+        --color-background-inverted: 38,39,42; /* bg-neutral-700 */
+        --color-background-inverted-muted: 41, 37, 36; /* bg-neutral-800 */
+        --color-background-overlay: 0, 0, 0; /* bg-black/50, alpha applied in config */
+        --color-background-overlay-muted: 0, 0, 0; /* bg-black/80, alpha applied in config */
+
+        /* Text */
+        --color-text-base: 64, 64, 64; /* text-neutral-700 */
+        --color-text-secondary: 115, 115, 115; /* text-neutral-500 */
+        --color-text-tertiary: 163, 163, 163; /* text-neutral-400 */
+        --color-text-base-inverted: 255, 255, 255; /* text-white */
+        --color-text-link-base: 81, 127, 164 /* primary */
+        --color-text-link-base-hover: 48, 96, 136; /* primary-dark */
+
+        /* Border and outline */
+        --color-border-base: 229, 229, 229; /* border-neutral-200 */
+        --color-border-secondary: 82, 82, 82; /* border-neutral-600 */
+        --color-outline-base: 163, 163, 163; /* outline-neutral-400 */
+
+        /* Icon */
+        --color-icon-base: 64, 64, 64; /* text-neutral-700 */
+        --color-icon-muted: 165, 166, 170; /* text-neutral-500 */
+        --color-icon-inverted: 255, 255, 255; /* bg-white */
+        --color-icon-like: 220, 38, 38; /* text-red-600 */
+        --color-icon-repost: 22, 163, 74; /* text-green-600 */
+
+        /* Status */
+        --color-status-base: 82, 82, 82; /* text-neutral-600 */
+        --color-status-success: 22, 163, 74; /* text-green-600 */
+        --color-status-warning: 234, 88, 12; /* text-orange-600 */
+        --color-status-danger: 220, 38, 38; /* text-red-600 */
+
+        /* Extra */
+        --color-navbar: 38,39,42;
+        --color-navbar-selected: 23,24,25;
     }
 
     html {
