--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -188,4 +188,11 @@
         border: 1px solid;
         border-color: #ffffff20 #ffffff20 #ffffff00;
       }
+      #appTop a {
+        padding: 0.5rem;
+        border: 0.6px solid #00000096;
+        border-radius: 6px;
+        box-shadow: 0 0.6px 1px 0.5px #00000070 inset, 0 0.75px #ffffff4f;
+        background: linear-gradient(#0000, #1225351f);
+      }
 }
