--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,7 +127,7 @@
 .homeBannerButton {color:#fff}
 
 [data-theme="2012"] {
-    #appTop, .homepageBanner {background: linear-gradient( #517fa4, #306088);}
+    .appTop, .homepageBanner {background: linear-gradient( #517fa4, #306088);}
     #appBottom {background: linear-gradient( #616161, #444444 50%)}
     #appBottom a,
     #appBottom button {
@@ -145,11 +145,12 @@
         right: -1px;
         border: 1px solid;
         border-color: #ffffff20 #ffffff20 #ffffff00;
+        border-radius: inherit;
     }
     #appBottom a.bg-skin-overlay {
         background: radial-gradient(farthest-corner at 50% 90%, #444,#111);
     }
-    #appTop a,
+    .appTop a,
     .homeBannerButton {
         padding: 0.5rem;
         border: 0.6px solid #00000096;
